option('force-32-bit', type: 'boolean', value: false, yield: true)
option('enable-pedantic-error', type: 'boolean', value: false, yield: true)
option('enable-werror', type: 'boolean', value: false, yield: true)
option('compiler-rt-exclude-atomic-builtins', type: 'boolean', value: true, yield: true)
